--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,16 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script>
+    jQuery.ajax({url: "/category/1/product/1", type: "DELETE", success: function(data, textStatus, jqXHR) { console.dir(data); }});
+
+    
+    </script>
   </body>
 </html>
