--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,8 @@
     
     </script>-->
     
+    <!-- Update Product Script -->
+    
     <script>
     jQuery.ajax({
         url: "/category/1/product/1", 
